client/main.scss
/* CSS declarations go here */
body, html {
  padding: 0;
  margin: 0;
}

.container {
  margin: 25px;
}

.message-wrapper {
  margin-bottom: 9px;

  &::after {
    content: "";
    display: table;
    clear: both;
  }
}

.message {
  display: inline-block;
  position: relative;
  max-width: 236px;
  float: none;
  clear: both;
  margin-bottom: 10px;
  border-radius: 7px;
  box-shadow: 0 1px 2px rgba(0, 0, 0, .15);

  &.message-mine {
    float: right;
    background-color: #DCF8C6;
  }

  &.message-other {
    float: left;
    background-color: #fafafa;
  }

  &.message-other::before, &.message-mine::before, {
    content: "";
    position: absolute;
    bottom: 3px;
    width: 12px;
    height: 19px;
    background-position: 50% 50%;
    background-repeat: no-repeat;
    background-size: contain;
  }

  &.message-other::before {
    left: -11px;
    background-image: url(/message-other.png)
  }

  &.message-mine::before {
    right: -11px;
    background-image: url(/message-mine.png)
  }

  .message-text {
    padding: 5px 7px;
    word-wrap: break-word;

    &::after {
      content: " \00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0";
      display: inline;
    }
  }

  .message-timestamp {
    position: absolute;
    bottom: 2px;
    right: 7px;
    color: gray;
    font-size: 12px;
  }
}

.message-input {
  padding: 10px;

  .message-textarea {
    display: block;
  }

  .message-send {

  }
}


// Login forms

#login-buttons {
  margin-right: 15px;
  width: 150px;
}

#login-buttons .login-link-and-dropdown-list {
  text-align: right;
}

#login-dropdown-list {
  left: -110px;
  font-family: Roboto, sans-serif;
}

#login-dropdown-list input {
  border-radius: 2px;
}

#login-dropdown-list .message {
  border-radius: 0;
  box-shadow: none;
}

.accounts-dialog {
  border-radius: 0;
}

#login-buttons .login-close-text {
  float: right;
}

#login-buttons .login-button, .accounts-dialog .login-button {
  border-radius: 2px;
  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
  background-color: rgb(0, 188, 212);
  border-color: rgb(0, 188, 212);
  text-transform: uppercase;
  font-family: Roboto, sans-serif;
  color: white;
}

